Jar + Compilation/Execution instructions
Signed-off-by: helmiri <Hamza.El.Miri@ulb.be>